# dbdiff

./: Cargo.toml
src/: cli.rs  config.rs  main.rs
src/commands/: diff.rs  history.rs  init.rs  mod.rs  snapshot.rs
src/diff/: engine.rs
src/output/: terminal.rs
src/schema/: models.rs  postgres.rs
src/storage/: sqlite.rs
