[package]
name = "dbdiff"
version = "0.1.0"
edition = "2021"
description = "CLI tool to track database schema changes"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Database connections
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal output
colored = "2"

# Error handling
anyhow = "1"
thiserror = "1"

# Date/time for snapshots
chrono = { version = "0.4", features = ["serde"] }
